--- a/applicationsets/matrix-generator.yaml
+++ b/applicationsets/matrix-generator.yaml
@@ -23,6 +23,8 @@ spec:
     spec:
       project: default
       source:
+        repoURL: https://github.com/Amitk3293/cw-training.git
+        targetRevision: HEAD
         path: "applicationsets/infra/{{appName}}"
         helm:
           # Release name override (defaults to application name)
