--- a/applicationsets/matrix-generator.yaml
+++ b/applicationsets/matrix-generator.yaml
@@ -7,10 +7,6 @@ spec:
   generators:
   - list:
       elements:
-      - cluster: in-cluster #engineering-dev
-        url: https://kubernetes.default.svc
-#     - cluster: engineering-prod
-#       url: https://kubernetes-dev.cellwize.com
       - appName: prometheus
         namespace: monitoring
       - appName: mysql
@@ -36,7 +32,7 @@ spec:
           valueFiles:
           - values.yaml
       destination:
-        name: "{{cluster}}"
+        name: in-cluster
         namespace: "{{namespace}}"
       syncPolicy:
         automated:
